--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     padding: auto;
     padding-top: 3em;
     margin-top: 0;
-    width: 75%;
+    width: 70%;
     background-color: rgba(0, 0, 0, 0.0);
     padding-bottom: 2.7em;
 }
@@ -33,8 +33,8 @@ body {
 }
 
 img {
-    width: 40%;
-    height: 500%;
+    width: 30%;
+    height: 40%;
     border-radius: 90%;
     margin-bottom: 2em;
     
@@ -90,4 +90,11 @@ a:hover {
     color: #000;
     text-decoration: none;
     transition-duration: .5;
+}
+
+
+@media only screen (max-width: 500px;)
+
+#stars {
+    display: none;
 }
