--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
 }
 
 img {
-    width: 40%;
-    height: 60%;
+    width: 30%;
+    height: 40%;
     border-radius: 90%;
     margin-bottom: 2em;
     
@@ -45,22 +45,26 @@ h1, h2, h3, p, ul, .fa, a {
     color: #fff;
 }
 
-h1 {
-    font-family: 'Lobster', cursive;
-    font-size: 4em;
-}
-
 h2, h3, p, ul, a {
     font-family: 'Cabin', sans-serif;
 }
+
+#hello h1, #quote, #contact h2, #work h2 {
+    font-family: 'Lobster', cursive;
+}
+
+h1 {
+    font-size: 4em;
+}
+
 
 ul {
     list-style-type: none;
 }
 
 #list, #stars {
-    display:inline-block;
-    font-size: 2em;
+    display: inline-block;
+    font-size: 1.7em;
 }
 
 #list {
@@ -83,5 +87,20 @@ a {
 }
 
 a:hover {
-    color: #000;
+    color: #6b2457;
+    text-decoration: none;
+}
+
+#work a {
+    font-size: 1.9em;
+}
+
+@media (max-width: 650px) {
+    #stars {
+        display: none;
+    }
+    
+    #list {
+        font-size: 1.5em;
+    }
 }
