--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 body {
     padding-top: 0;
     margin-top: 0;
-    background: url("space.jpeg");
+    background: url("space-min.jpeg");
     background-size: 100% 100%;
     background-attachment: fixed;
     background-color: #fff;
