--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 body {
     padding-top: 0;
     margin-top: 0;
-    background: url("space-min.jpeg");
+    background: url("https://s19.postimg.org/4wks01pgj/space.jpg");
     background-size: 100% 100%;
     background-attachment: fixed;
     background-color: #fff;
@@ -23,7 +23,7 @@ body {
     padding-top: 3em;
     margin-top: 0;
     width: 75%;
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: rgba(250, 250, 250, 0.0);
     padding-bottom: 2.7em;
 }
 
@@ -33,9 +33,8 @@ body {
 }
 
 #me {
-    width: 30%;
-    height: 40%;
-    border-radius: 90%;
+    width: 40%;
+    border-radius: 70%;
     margin-bottom: 2em;
     
 }
@@ -46,11 +45,11 @@ h1, h2, h3, p, ul, .fa, a {
 }
 
 h2, h3, p, ul, a {
-    font-family: 'Cabin', sans-serif;
+    font-family: 'Lekton', sans-serif;
 }
 
 #hello h1, #quote, #contact h2, #work h2 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Pacifico', cursive;
 }
 
 h1 {
@@ -91,12 +90,21 @@ a:hover {
     text-decoration: none;
 }
 
+a:visited {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:visited:hover {
+    color: #6b2457;
+}
+
 #work a {
     font-size: 1.9em;
 }
 
 #event img, #tour img {
-    width: 300px;
+    width: 18.75em;
     height: auto;
 }
 
