--- a/style.css
+++ b/style.css
@@ -103,16 +103,16 @@ a:visited:hover {
     font-size: 1.9em;
 }
 
-#event img, #tour img, #menu img {
+.sites img {
     width: 18.75em;
     height: auto;
 }
 
-#event a, #tour a, #menu a {
+.sites a {
     font-size: 1em;
 }
 
-#event, #tour, #menu {
+.sites {
     padding-top: 2em;
     display:inline-block;
     padding: 1.5em;
@@ -130,7 +130,7 @@ a:visited:hover {
         font-size: 1.5em;
     }
     
-    #event, #tour, #menu {
+    .sites {
         display: block;
     }
     
