--- a/style.css
+++ b/style.css
@@ -109,8 +109,8 @@ a:visited:hover {
 }
 
 .sites img {
-    width: 325px;
-    height: 240px;
+    width: 15em;
+    height: 9em;
 }
 
 .sites a {
@@ -121,6 +121,10 @@ a:visited:hover {
     padding-top: 2em;
     display:inline-block;
     padding: 1.5em;
+}
+
+.footer {
+    margin-top: 1.25em;
 }
 
 
@@ -141,5 +145,9 @@ a:visited:hover {
     
     body {
         background-attachment: fixed;
+    }
+    
+    #blurb p {
+        width: 100%;
     }
 }
