--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 body {
     padding-top: 0;
     margin-top: 0;
-    background: url("https://s19.postimg.org/4wks01pgj/space.jpg");
+    background: url("https://s19.postimg.org/3jqehtzqb/space-min.jpg");
     background-size: 100% 100%;
     background-attachment: fixed;
     background-color: #fff;
@@ -145,9 +145,14 @@ a:visited:hover {
     
     body {
         background-attachment: fixed;
+        background-repeat: no-repeat;
     }
     
     #blurb p {
         width: 100%;
+    }
+    
+    .sitelinks {
+        grid-template-columns: 100%;
     }
 }
